<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.example.android.anonymous.FirstScreenActivity">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:layout_alignParentTop="true"
        android:layout_above="@id/TextView1"
        android:src="@drawable/asd"/>
    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        android:textColor="@android:color/holo_green_dark" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/Anonymous"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:textStyle="italic"/>
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/Continue"
        android:textColor="@android:color/holo_green_dark"
        android:background="@android:color/white"/>
</RelativeLayout>
